--- a/app/src/main/res/layout/item_row_user.xml
+++ b/app/src/main/res/layout/item_row_user.xml
@@ -47,7 +47,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="start"
         app:layout_constraintTop_toBottomOf="@id/tv_username"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/img_followers"
         app:layout_constraintBottom_toBottomOf="parent"
         />
     <ImageView
@@ -57,8 +57,8 @@
         android:layout_width="24dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/tv_followers"
-        app:layout_constraintBottom_toBottomOf="@id/tv_followers"
-        app:layout_constraintTop_toTopOf="@id/tv_followers"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_username"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
