--- a/app/src/main/res/menu/menu_option.xml
+++ b/app/src/main/res/menu/menu_option.xml
@@ -10,4 +10,9 @@
         android:title="@string/settings"
         android:icon="@drawable/ic_baseline_settings_24"
         app:showAsAction="ifRoom" />
+    <item android:id="@+id/menu_favorite"
+        android:title="@string/favorite"
+        android:icon="@drawable/ic_baseline_favorite_24"
+        app:showAsAction="ifRoom"
+        />
 </menu>
