--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,9 +8,37 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="UserText">
+        <item name="android:layout_width">0dp</item>
+    </style>
+    <style name="UserText.Name">
+        <item name="android:layout_height">28dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+    <style name="UserText.Detail">
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="UserText.Detail.Value">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="UserText.Detail.StringValue">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:gravity">start</item>
+        <item name="android:minLines">1</item>
+        <item name="android:maxLines">3</item>
+        <item name="android:layout_height">wrap_content</item>
+
     </style>
 </resources>
