--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,5 +35,8 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:gravity">start</item>
+        <item name="android:minLines">1</item>
+        <item name="android:maxLines">3</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 </resources>
